--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 <div class="col-lg-5">
                     <h2>CONTACT US TODAY NOW</h2>
                     <p class="light">
-                        If you are looking for a me
+                        If you are looking for me
                     </p>
                     <p>
                         <span class="email"><img src="images/email.png"
@@ -517,7 +517,7 @@
     </footer>
     <div class="container-fluid copy">
         <div class="col-lg-12">
-            <p>&copy; 2020 DD Derold. All rights Reserved. Design by <a href="https://google.com" target="_blank">Youtube</a>.</p>
+            <p>&copy; 2020 DD Derold. All rights Reserved. Design by <a href="https://https://ddjoeylim.netlify.app" target="_blank">DD</a>.</p>
         </div>
     </div>
 
