--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you Derold.</h5>
+                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you DeXXXD.</h5>
                                 <p class="card-text">I don't want to live this way
                                     I really wish we never knew
                                     Out of sight and out of mind
@@ -473,7 +473,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-pinterest-p"></i></a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="https://twitter.com/anonymoushacker"><i class="fab fa-twitter"></i></a>
+                        <li class="nav-item"><a class="nav-link" href="https://twitter.com/joeylim"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
                         </li>
@@ -517,7 +517,7 @@
     </footer>
     <div class="container-fluid copy">
         <div class="col-lg-12">
-            <p>&copy; 2020 DD Derold. All rights Reserved. Design by <a href="https://https://ddjoeylim.netlify.app" target="_blank">DD</a>.</p>
+            <p>&copy; 2020 DD anonymous. All rights Reserved. Design by <a href="https://https://ddjoeylim.netlify.app" target="_blank">DD</a>.</p>
         </div>
     </div>
 
