--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you DeXXXD.</h5>
+                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you DeXXXX.</h5>
                                 <p class="card-text">I don't want to live this way
                                     I really wish we never knew
                                     Out of sight and out of mind
