--- a/index.html
+++ b/index.html
@@ -394,9 +394,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news1.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Melody </h5>
-                                <p class="card-text">I can only imagine
-                                    How it is to be with you
+                                <h5>Strength doesn’t come from what you can do, it comes from overcoming the things you thought you couldn’t </h5>
+                                <p class="card-text">Some people feel the rain. Others just get wet
                                     From the first day I saw your face
                                     I knew this love was true
                                     But you're already taken
@@ -410,20 +409,13 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news2.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Dont be sad </h5>
-                                <p class="card-text">I can only imagine us both loving through the night
-                                    I can only imagine us together side by side
-                                    I can only imagine we're dancing in the moonlight
-                                    I can only imagine
-                                    I can only imagine
-                                    I want to know
-                                    If you will be
-                                    My favorite song
-                                    My little melody
-                                    If we could be
-                                    A symphony
-                                    Then we would be
-                                    A perfect harmony</p>
+                                <h5>Don't cry again</h5>
+                                <p class="card-text">
+                                    I remember tears streaming down your face when I said I'll never let you go
+                                    When all those shadows almost killed your light
+                                    I remember you said don't leave me here alone
+                                    But all that's dead and gone and passed tonight
+                                    </p>
                             </div>
                         </div>
                     </div>
@@ -431,7 +423,7 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you DeXXXX.</h5>
+                                <h5>Don't cry for me again I am sorry..I hope you can forgive me that I abandon you De---d.</h5>
                                 <p class="card-text">I don't want to live this way
                                     I really wish we never knew
                                     Out of sight and out of mind
